I fixed the warnings (I also changed TableOfDecks)